--- a/css/park.css
+++ b/css/park.css
@@ -74,6 +74,7 @@ img {
     font-size: 1.65rem;
     padding-top: 7px;
     margin-left: 11rem;
+    line-height: 2.2ch;
     list-style-type: circle;
 }
 
